--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.wanandroidkotlin"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
         versionName "1.0.0"
@@ -66,7 +66,12 @@ dependencies {
     // glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
+
+    // recyclerView
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    // material component
+    implementation 'com.google.android.material:material:1.0.0'
 
 
 }
