--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,8 @@ dependencies {
     // material component
     implementation 'com.google.android.material:material:1.0.0'
 
+    // paging
+    implementation "androidx.paging:paging-runtime-ktx:2.1.1"
+
 
 }
