--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     testImplementation 'junit:junit:4.12'
@@ -36,7 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // okHttp
-    implementation 'com.squareup.okhttp3:okhttp:4.2.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
     // retrofit2
@@ -46,35 +50,38 @@ dependencies {
 
     // RxJava & RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
 
     // Dagger
-    implementation 'com.google.dagger:dagger:2.23.1'
-    kapt 'com.google.dagger:dagger-compiler:2.23.1'
-    implementation 'com.google.dagger:dagger-android:2.23.1'
-    kapt 'com.google.dagger:dagger-android-processor:2.23.1'
-    implementation 'com.google.dagger:dagger-android-support:2.23.1'
+    implementation 'com.google.dagger:dagger:2.25.2'
+    kapt 'com.google.dagger:dagger-compiler:2.25.2'
+    implementation 'com.google.dagger:dagger-android:2.25.2'
+    kapt 'com.google.dagger:dagger-android-processor:2.25.2'
+    implementation 'com.google.dagger:dagger-android-support:2.25.2'
     compileOnly 'org.glassfish:javax.annotation:10.0-b28'
 
-    // log
-    implementation 'com.orhanobut:logger:1.15'
-
     // glide
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     // recyclerView
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     // material component
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+
+    // swipe fresh layout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 
     // paging
-    implementation "androidx.paging:paging-runtime-ktx:2.1.1"
+    implementation "androidx.paging:paging-runtime:2.1.1"
 
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    kapt 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
 
 }
