--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     kapt 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
 
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
 }
